crates/typecheck/tests/fixtures/errors/call_arity_mismatch.ax
fn add(a: Int, b: Int) -> Int { a + b }
fn main() { add(1) }